--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -13,8 +13,8 @@
             <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active' : ''}">
                 <a class="nav-link" href="/export">Export</a>
             </li>
-            <li class="nav-item" th:classappend="${currentPage == 'load' ? 'active' : ''}">
-                <a class="nav-link" href="/load">Load</a>
+            <li class="nav-item" th:classappend="${currentPage == 'save' ? 'active' : ''}">
+                <a class="nav-link" href="/save">Save</a>
             </li>
             <!-- Add other navigation items similarly -->
         </ul>
