--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -13,9 +13,9 @@
             <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active' : ''}">
                 <a class="nav-link" href="/export">Export</a>
             </li>
-            <li class="nav-item" th:classappend="${currentPage == 'save' ? 'active' : ''}">
-                <a class="nav-link" href="/save">Save</a>
-            </li>
+<!--            <li class="nav-item" th:classappend="${currentPage == 'save' ? 'active' : ''}">-->
+<!--                <a class="nav-link" href="/save">Save</a>-->
+<!--            </li>-->
             <!-- Add other navigation items similarly -->
         </ul>
     </div>
