--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;" th:fragment="navbar-content">
+<nav class="navbar navbar-expand-lg navbar-light gap-3" style="background-color: #e3f2fd;" th:fragment="navbar-content">
     <a class="navbar-brand" href="#">Menu</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse gap-3" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item" th:classappend="${currentPage == 'import' ? 'active' : ''}">
                 <a class="nav-link" href="/import">Import</a>
