--- a/ui/src/main/resources/templates/export.html
+++ b/ui/src/main/resources/templates/export.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header.html :: header}">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js" integrity="sha512-8RnEqURPUc5aqFEN04aQEiPlSAdE0jlFS/9iGgUyNtwFnSKCXhmB6ZTNl7LnDtDWKabJIASzXrzD0K+LYexU9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css" integrity="sha512-uf06llspW44/LZpHzHT6qBOIVODjWtv4MxCricRxkzvopAlSWnTf6hpZTFxuuZcuNE9CBQhqE0Seu1CoRk84nQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
-<div th:replace="~{fragments/navbar.html :: navbar-content}">
+<div th:replace="~{fragments/navbar.html :: navbar-content}"></div>
 
-</div>
 <div aria-live="polite" aria-atomic="true" style="position: relative; z-index: 1000;">
     <!-- Position it -->
     <div style="position: fixed; top: 0; right: 0; margin: 15px;">
@@ -26,7 +22,6 @@
     </div>
 </div>
 
-
 <!-- Tab navs -->
 <ul class="nav nav-pills nav-fill mt-1" id="fileTabs" role="tablist">
     <li class="nav-item" role="presentation" th:each="api : ${apiList}">
@@ -42,7 +37,6 @@
     </li>
 </ul>
 
-
 <!-- Tab contents -->
 <div class="tab-content mt-1 p-1" id="fileTabsContent" th:each="api : ${apiList}">
     <div class="tab-pane fade"
@@ -52,8 +46,7 @@
         <div class="editor-container rounded mt-3"
              th:data-language="${api.language}"
              th:id="'editor-' + ${api.id}"
-             style="height: calc(100vh - 200px); margin: 10px 20px"
-        >
+             style="height: calc(100vh - 200px); margin: 10px 20px">
         </div>
     </div>
 </div>
@@ -64,142 +57,11 @@
     <button type="button" class="btn btn-danger" onclick="reset()">Reset</button>
 </div>
 
-<!-- Monaco Editor initialization script -->
-<script>
-    let editors = {};  // Object to hold references to all the Monaco editor instances
-    function showToast(message) {
-        const toastElement = document.getElementById('notificationToast');
-        toastElement.querySelector('.toast-body').textContent = message;
-        const toast = new bootstrap.Toast(toastElement);
-        toast.show();
-    }
-
-    window.onload = function() {
-        require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs' }});
-
-
-        require(['vs/editor/editor.main'], function() {
-            // // Set YAML diagnostics options
-            // monaco.languages.yaml.yamlDefaults.setDiagnosticsOptions({
-            //     validate: true,
-            //     enableSchemaRequest: true,
-            //     hover: true,
-            //     completion: true,
-            // });
-
-            document.querySelectorAll('.tab-pane').forEach(pane => {
-                const editorId = 'editor-' + pane.id;
-                const editorElement = document.getElementById(editorId);
-                // Find the child div element with the class editor-container
-                const editorContainer = pane.querySelector('.editor-container');
-
-                // Get the data-language attribute from the editorContainer element
-                let language = editorContainer.getAttribute('data-language');
-
-                console.log('Language: ' + language);
-                // Make GET request to the API endpoint to fetch the content
-                fetch(`http://localhost:18080/api/${pane.id}/getconfiguration`)
-                    .then(response => response.text())
-                    .then(content => {
-                        editors[editorId] = monaco.editor.create(editorElement, {
-                            value: content,
-                            language: language.toLowerCase(),  // Use the language here
-                            scrollbar: {
-                                vertical: 'auto',
-                                horizontal: 'auto'
-                            },
-                            theme: 'vs-dark',
-                            automaticLayout: true,
-                        });
-                    })
-                    .catch(error => {
-                        console.error(`Error fetching content for ${editorId}: ${error}`);
-                    });
-            });
-        });
-
-        // Listen for the Bootstrap tab shown event to refresh the Monaco editors
-        document.getElementById('fileTabs').addEventListener('shown.bs.tab', function(e) {
-            const targetId = e.target.getAttribute('href').substring(1);  // Get the id of the activated tab pane
-            const editorId = 'editor-' + targetId;
-            if (editors[editorId]) {
-                setTimeout(function() {  // Use a timeout to delay the refresh
-                    editors[editorId].layout();  // Refresh the Monaco editor
-                }, 300);  // Delay time in milliseconds (adjust as needed)
-            }
-        });
-
-        const editorContainers = document.querySelectorAll('.editor-container');
-        editorContainers.forEach(container => {
-            container.style.height = (window.innerHeight - 200) + 'px';
-        });
-    }
-
-    function save() {
-        console.log('Save button clicked');
-        const activePaneId = document.querySelector('.tab-pane.show.active').id;
-        const editorId = 'editor-' + activePaneId;
-        const editorContent = editors[editorId].getValue();  // Get the current content of the active editor
-        const activePaneName = document.querySelector(`#tab-${activePaneId}`).textContent;
-
-        const formData = new FormData();
-        const file = new Blob([editorContent], { type: 'text/plain' });
-
-        formData.append('file', file);
-
-        fetch(`http://localhost:18080/api/${activePaneId}/saveconfiguration`, {
-            method: 'POST',
-            body: formData
-        })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok ' + response.statusText);
-                }
-                return response.text();
-            })
-            .then(data => {
-                console.log('File saved successfully:', data);
-                showToast('File saved successfully');
-                showToast(`"${activePaneName}" Configuration saved successfully.`);
-            })
-            .catch(error => {
-                console.error('There has been a problem with your fetch operation:', error);
-            });
-    }
-
-
-    function exportData() {
-        console.log('Export button clicked');
-        // Your export logic here
-    }
-
-    function reset() {
-        console.log('Reset button clicked');
-        const activePaneId = document.querySelector('.tab-pane.show.active').id;
-        const editorId = 'editor-' + activePaneId;
-        const activePaneName = document.querySelector(`#tab-${activePaneId}`).textContent;
-
-        fetch(`http://localhost:18080/api/${activePaneId}/getconfiguration`)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok ' + response.statusText);
-                }
-                return response.text();
-            })
-            .then(content => {
-                // Set the editor content to the fetched content
-                editors[editorId].setValue(content);
-                console.log('Editor content reset successfully');
-
-                showToast(`"${activePaneName}" configuration content has been rollback to Previously Saved State.`);
-
-            })
-            .catch(error => {
-                console.error('There has been a problem with your fetch operation:', error);
-            });
-    }
-
-</script>
+<!-- External script imports -->
+<script src="/js/main.js"></script>
+<script src="/js/save.js"></script>
+<script src="/js/export.js"></script>
+<script src="/js/reset.js"></script>
 
 </body>
 </html>
