--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <nav class="navbar navbar-expand-lg navbar-light gap-3" style="background-color: #e3f2fd;" th:fragment="navbar-content">
     <a class="navbar-brand" href="#">Menu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarNav" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse gap-3" id="navbarNav">
@@ -13,9 +14,9 @@
             <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active' : ''}">
                 <a class="nav-link" href="/export">Export</a>
             </li>
-<!--            <li class="nav-item" th:classappend="${currentPage == 'save' ? 'active' : ''}">-->
-<!--                <a class="nav-link" href="/save">Save</a>-->
-<!--            </li>-->
+            <!--            <li class="nav-item" th:classappend="${currentPage == 'save' ? 'active' : ''}">-->
+            <!--                <a class="nav-link" href="/save">Save</a>-->
+            <!--            </li>-->
             <!-- Add other navigation items similarly -->
         </ul>
     </div>
