--- a/ui/src/main/resources/templates/import.html
+++ b/ui/src/main/resources/templates/import.html
@@ -1,47 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/header.html :: header}">
     <title>Import Configuration</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
-<h2>Import Configuration</h2>
+<div th:replace="~{fragments/navbar.html :: navbar-content}"></div>
 
 <!-- Include the toast fragment -->
 <div th:replace="~{fragments/toast :: toast}"></div>
 
-<!-- File input field -->
-<input type="file" id="fileInput" accept=".zip" />
+<div class="row mb-3">
+    <div class="col-md-9">
+        <!-- Updated file input field -->
+        <div class="input-group">
+            <div class="custom-file">
+                <input type="file" class="form-control" id="fileInput" accept=".zip" name="api" required>
+                <label class="custom-file-label" for="fileInput">Select Configuration Bundle</label>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <!-- Upload button -->
+        <button id="uploadButton" class="btn btn-primary w-100">Upload</button>
+    </div>
+</div>
 
 
-<!-- Bootstrap JS and Popper.js -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-<script>
-    // Function to handle file upload
-    document.getElementById('fileInput').addEventListener('change', function() {
-        const file = this.files[0];
-        if (file) {
-            const formData = new FormData();
-            formData.append('file', file);
-
-            fetch('http://localhost:18080/api/import', {
-                method: 'POST',
-                body: formData,
-            })
-                .then(response => response.json())
-                .then(data => {
-                    showToast(data);
-                })
-                .catch(error => {
-                    showToast('Error: ' + error.message);
-                });
-        }
-    });
-</script>
 <script src="/js/toast.js"></script>
+<script src="/js/import.js"></script>
 </body>
 </html>
