--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<nav class="navbar navbar-expand-lg navbar-light gap-3" style="background-color: #e3f2fd;" th:fragment="navbar-content">
-    <a class="navbar-brand" href="#">Menu</a>
-    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-            data-target="#navbarNav" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse gap-3" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item" th:classappend="${currentPage == 'import' ? 'active' : ''}">
-                <a class="nav-link" href="/import">Import</a>
-            </li>
-            <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active' : ''}">
-                <a class="nav-link" href="/export">Export</a>
-            </li>
-            <!--            <li class="nav-item" th:classappend="${currentPage == 'save' ? 'active' : ''}">-->
-            <!--                <a class="nav-link" href="/save">Save</a>-->
-            <!--            </li>-->
-            <!-- Add other navigation items similarly -->
-        </ul>
+<head>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        .active-tab {
+            background-color: #007BFF; /* Bootstrap primary color */
+            color: white !important;  /* Make text color white */
+        }
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar-content">
+    <div class="container">
+        <a class="navbar-brand" href="#">Menu</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item" th:classappend="${currentPage == 'import' ? 'active-tab' : ''}">
+                    <a class="nav-link" aria-current="page" href="/import">Import</a>
+                </li>
+                <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active-tab' : ''}">
+                    <a class="nav-link" href="/export">Export</a>
+                </li>
+                <!-- Add other navigation items similarly -->
+            </ul>
+        </div>
     </div>
 </nav>
+<!--&lt;!&ndash; JavaScript Bundle with Popper &ndash;&gt;-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>-->
+</body>
 </html>
