--- a/ui/src/main/resources/templates/import.html
+++ b/ui/src/main/resources/templates/import.html
@@ -9,21 +9,27 @@
 <!-- Include the toast fragment -->
 <div th:replace="~{fragments/toast :: toast}"></div>
 
-<div class="row mb-3">
-    <div class="col-md-9">
-        <!-- Updated file input field -->
-        <div class="input-group">
-            <div class="custom-file">
-                <input type="file" class="form-control" id="fileInput" accept=".zip" name="api" required>
-                <label class="custom-file-label" for="fileInput">Select Configuration Bundle</label>
+<div class="d-flex align-items-center" style="height: 100vh;">
+    <div class="container">
+        <label for="fileInput" class="form-label">Upload Configuration Bundle</label>
+
+        <div class="row mb-3">
+            <div class="col-md-9">
+                <!-- Updated file input field -->
+                <div class="input-group">
+                    <div class="custom-file" style="width: 100%;">
+                        <input type="file" class="form-control" id="fileInput" accept=".zip" name="api" required>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <!-- Upload button -->
+                <button id="uploadButton" class="btn btn-primary w-100">Upload</button>
             </div>
         </div>
     </div>
-    <div class="col-md-3">
-        <!-- Upload button -->
-        <button id="uploadButton" class="btn btn-primary w-100">Upload</button>
-    </div>
 </div>
+
 
 
 <script src="/js/toast.js"></script>
