--- a/ui/src/main/resources/templates/fragments/header.html
+++ b/ui/src/main/resources/templates/fragments/header.html
@@ -18,6 +18,10 @@
             background-color: #007BFF; /* Bootstrap primary color */
             color: white !important;  /* Make text color white */
         }
+        .saved {
+            background-color: #d9f9d9 !important;
+        }
+
     </style>
 </head>
 </html>
