--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -25,6 +25,9 @@
                 <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active-tab' : ''}">
                     <a class="nav-link" href="/export">Export</a>
                 </li>
+                <li class="nav-item" th:classappend="${currentPage == 'export-configuration' ? 'active-tab' : ''}">
+                    <a class="nav-link" href="/export-configuration">Configure Export</a>
+                </li>
                 <!-- Add other navigation items similarly -->
             </ul>
         </div>
