--- a/ui/src/main/resources/templates/fragments/toast.html
+++ b/ui/src/main/resources/templates/fragments/toast.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="toast" aria-atomic="true" aria-live="polite" style="position: relative; z-index: 1000;">
+<div aria-atomic="true" aria-live="polite" style="position: relative; z-index: 1000;" th:fragment="toast">
     <div style="position: fixed; top: 0; right: 0; margin: 15px;">
         <div aria-atomic="true" aria-live="assertive" class="toast" id="notificationToast" role="alert">
             <div class="toast-header">
