--- a/ui/src/main/resources/templates/export-configuration.html
+++ b/ui/src/main/resources/templates/export-configuration.html
@@ -9,39 +9,53 @@
 
 <div class="container mt-4">
     <div>
-    <h1>Export Configuration</h1>
-        <button type="button" class="btn btn-success" id="add-config-button">Add New Configuration</button>
+        <h1>Export Configuration</h1>
+        <button class="btn btn-success" id="add-config-button" type="button">Add New Configuration</button>
     </div>
     <table class="table table-bordered" id="config-table">
-    <thead>
-            <tr>
-                <th>Configuration Name</th>
-                <th>API</th>
-                <th>Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="exportConfig : ${exportConfigurationsList}" th:id="${'row-' + exportConfig.name}" class="config-row">
-                <td>
-                    <!-- Hidden input to send the configuration name -->
-                    <input type="hidden" th:id="${'hidden-' + exportConfig.name}" th:name="name" th:value="${exportConfig.name}" />
-                    <span th:text="${exportConfig.name}"></span> <!-- Display the name -->
-                </td>
-                <td>
-                    <div th:each="api : ${apiList}">
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input api-checkbox" th:id="${api.id}" th:name="apiList" th:value="${api.label}" th:checked="${#lists.contains(exportConfig.apiList, api)}">
-                            <label class="form-check-label" th:for="${api.id}" th:text="${api.label}"></label>
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <button type="button" class="btn btn-primary save-button" th:data-config-name="${exportConfig.name}" onclick="handleSaveButtonClick(this.getAttribute('data-config-name'))" disabled>Save</button>
-                </td>
-            </tr>
+        <thead>
+        <tr>
+            <th>Configuration Name</th>
+            <th>API</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="config-row" th:each="exportConfig : ${exportConfigurationsList}"
+            th:id="${'row-' + exportConfig.name}">
+            <td>
+                <!-- Hidden input to send the configuration name -->
+                <input th:id="${'hidden-' + exportConfig.name}" th:name="name" th:value="${exportConfig.name}"
+                       type="hidden"/>
+                <span th:text="${exportConfig.name}"></span> <!-- Display the name -->
+            </td>
+            <td>
+                <div th:each="api : ${apiList}">
+                    <div class="form-check">
+                        <input
+                                class="form-check-input api-checkbox"
+                                th:checked="${exportConfig.hasApi(api.id)   }"
+                                th:id="${exportConfig.name + '-' + api.id}"
+                                th:value="${api.id}"
+                                type="checkbox">
 
-            </tbody>
-        </table>
+                        <label
+                                class="form-check-label"
+                                th:for="${exportConfig.name + '-' + api.id}"
+                                th:text="${api.getLabel()}">
+                        </label>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <button class="btn btn-primary save-button" disabled onclick="handleSaveButtonClick(this.getAttribute('data-config-name'))"
+                        th:data-config-name="${exportConfig.name}" type="button">Save
+                </button>
+            </td>
+        </tr>
+
+        </tbody>
+    </table>
 </div>
 <script src="/js/exportConfigurations.js"></script>
 <script src="/js/toast.js"></script>
