--- a/ui/src/main/resources/templates/fragments/header.html
+++ b/ui/src/main/resources/templates/fragments/header.html
@@ -12,12 +12,14 @@
     <!-- Include Monaco Editor -->
     <script crossorigin="anonymous"
             integrity="sha512-OnAtCjouknPVEpJsz8W6FHpOLy2sxh1lWeC9utDE6jLwpnNYxAaeSufdvpBCnj9COsBkdBjrS4gqIYECeyIh6g=="
-            referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.js"></script>
+            referrerpolicy="no-referrer"
+            src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.44.0/min/vs/loader.js"></script>
     <style>
         .active-tab {
             background-color: #007BFF; /* Bootstrap primary color */
-            color: white !important;  /* Make text color white */
+            color: white !important; /* Make text color white */
         }
+
         .saved {
             background-color: #d9f9d9 !important;
         }
