--- a/ui/src/main/resources/templates/fragments/navbar.html
+++ b/ui/src/main/resources/templates/fragments/navbar.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .active-tab {
             background-color: #007BFF; /* Bootstrap primary color */
-            color: white !important;  /* Make text color white */
+            color: white !important; /* Make text color white */
         }
     </style>
 </head>
@@ -14,13 +14,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar-content">
     <div class="container">
         <a class="navbar-brand" href="#">Menu</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+                data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item" th:classappend="${currentPage == 'import' ? 'active-tab' : ''}">
-                    <a class="nav-link" aria-current="page" href="/import">Import</a>
+                    <a aria-current="page" class="nav-link" href="/import">Import</a>
                 </li>
                 <li class="nav-item" th:classappend="${currentPage == 'export' ? 'active-tab' : ''}">
                     <a class="nav-link" href="/export">Export</a>
