--- a/ui/src/main/resources/templates/export.html
+++ b/ui/src/main/resources/templates/export.html
@@ -39,14 +39,43 @@
         </div>
     </div>
 </div>
-<div class="button-container"
-     style="position: fixed; bottom: 20px; width: 100%; display: flex; justify-content: center;">
+<div class="button-container" style="position: fixed; bottom: 20px; width: 100%; display: flex; justify-content: center;"
+>
     <button class="btn btn-primary" disabled onclick="save(getActiveEditorId())" style="margin-right: 10px;"
             type="button">Save
     </button>
-    <button class="btn btn-secondary" onclick="exportData()" style="margin-right: 10px;" type="button">Export</button>
-    <button class="btn btn-danger" onclick="reset()" type="button">Reset</button>
+    <button class="btn btn-danger" onclick="reset()" type="button" style="margin-right: 10px">Reset</button>
+
+    <!-- Export Dropdown -->
+    <div class="dropdown  btn-outline-primary mr-1">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="exportDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+            Export
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="exportDropdown">
+            <!-- Static 'All' option -->
+            <li>
+                <a class="dropdown-item"
+                   href="#"
+                   data-export-name="All"
+                   th:data-api-list="${allApis}"
+                   onclick="exportData(this.getAttribute('data-export-name'), this.getAttribute('data-api-list'))">
+                All</a>
+            </li>
+
+            <!-- Dynamic options from exportOptions -->
+            <li th:each="exportOption : ${exportOptions}">
+                <a class="dropdown-item" href="#"
+                   th:text="${exportOption.name}"
+                   th:data-export-name="${exportOption.name}"
+                   th:data-api-list="${exportOption.apiIds}"
+                   onclick="exportData(this.getAttribute('data-export-name'), this.getAttribute('data-api-list'))">
+                </a>
+            </li>
+        </ul>
+    </div>
+
 </div>
+
 
 <!-- External script imports -->
 <script src="/js/main.js"></script>
